--- a/static/main.css
+++ b/static/main.css
@@ -365,6 +365,7 @@ body {
 
 .p1-gradient-color, .single-work-process .work-icon-box span, .single-feature .primary-btn:hover span, .single-remark .primary-btn span, .story-area .primary-btn span, .contact-form .primary-btn span {
   background: -webkit-linear-gradient(0deg, #3e69fe, #4cd4e3);
+  background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
